package com.appstr.timecontrol.util


const val GAMESCREEN_SETUPTIMESCREEN_ICON = "GameScreen SetupTimeScreen icon"


const val GAMESCREEN_PLAYER1_BACKGROUND = "Player 1 background"
const val GAMESCREEN_PLAYER1_MOVE_LABEL = "Player 1 move label"
const val GAMESCREEN_PLAYER1_TIME_LABEL = "Player 1 time label"
const val GAMESCREEN_PLAYER2_BACKGROUND = "Player 2 background"
const val GAMESCREEN_PLAYER2_MOVE_LABEL = "Player 2 move label"
const val GAMESCREEN_PLAYER2_TIME_LABEL = "Player 2 time label"

const val SETUPTIMESCREEN_CONTAINER = "SetupTimeScreen container"
const val SETUPTIMESCREEN_LIST = "SetupTimeScreen list"
const val SETUPTIMESCREEN_LISTITEM = "SetupTimeScreen_ListItem"



const val DIALOG_CANCELGAME = "DialogCancelCurrentGame"
const val DIALOG_CANCELGAME_CONFIRM = "DialogCancelCurrentGame_Confirm"
const val DIALOG_CANCELGAME_CANCEL = "DialogCancelCurrentGame_Cancel"

