...
            Row(
                modifier = Modifier
                    .padding(end = 8.dp)
                    .align(alignment = Alignment.End),
            ) {
                TextButton(onClick = { navController.popBackStack() }) {
                    Text(text = "Cancel")
                }
                TextButton(
                    onClick = {
                        if (gameVM.setPlayersTimeUseCase(player, hours, minutes, seconds)){
                            navController.popBackStack()
                        }else{
                            errorMessage = "INVALID FORMAT"
                        }
                    }
                ) {
                    Text(text = "Confirm")
                }
            }
        }
    }
}

...
