...
                    navController.popBackStack()
                }
            }
        ){
            Text(
                modifier = Modifier.padding(start = 64.dp, end = 64.dp),
                text = "Setup Game",
                fontSize = 22.sp,
                color = white
            )
        }
    }
    BackHandler {
...
